[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameOverPopUp/GameOverPopUp.gd" type="Script" id=1]
[ext_resource path="res://UI/Text.gd" type="Script" id=2]
[ext_resource path="res://UI/MainMenu.tres" type="Theme" id=3]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://art/fonts/FH-Millennia WTT/MILLENNIA.TTF"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
margin_left = 33.9412
margin_top = 24.0417
margin_right = 1881.94
margin_bottom = 1060.04
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
margin_right = 1848.0
margin_bottom = 1036.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.501306
anchor_right = 0.5
anchor_bottom = 0.501306
margin_left = -920.0
margin_top = -515.353
margin_right = 920.0
margin_bottom = 512.647
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 427.0
margin_right = 1840.0
margin_bottom = 476.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "YOU WIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartText" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 501.0
margin_right = 1840.0
margin_bottom = 538.0
focus_neighbour_top = NodePath("../QuitText")
focus_neighbour_bottom = NodePath("../OptionsText")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Restart"
align = 1
script = ExtResource( 2 )

[node name="QuitText" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 563.0
margin_right = 1840.0
margin_bottom = 600.0
focus_neighbour_top = NodePath("../OptionsText")
focus_neighbour_bottom = NodePath("../StartText")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Quit"
align = 1
script = ExtResource( 2 )

[node name="Back" type="Label" parent="PopupPanel/VBoxContainer"]
visible = false
margin_top = 515.0
margin_right = 1832.0
margin_bottom = 672.0
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "
Back

"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="PopupPanel" method="onOptionsLabelClicked"]
[connection signal="focus_entered" from="PopupPanel/VBoxContainer/StartText" to="PopupPanel/VBoxContainer/StartText" method="onHover"]
[connection signal="focus_exited" from="PopupPanel/VBoxContainer/StartText" to="PopupPanel/VBoxContainer/StartText" method="onExit"]
[connection signal="gui_input" from="PopupPanel/VBoxContainer/StartText" to="PopupPanel" method="onRestartGameClicked"]
[connection signal="mouse_entered" from="PopupPanel/VBoxContainer/StartText" to="PopupPanel/VBoxContainer/StartText" method="onHover"]
[connection signal="mouse_exited" from="PopupPanel/VBoxContainer/StartText" to="PopupPanel/VBoxContainer/StartText" method="onExit"]
[connection signal="focus_entered" from="PopupPanel/VBoxContainer/QuitText" to="PopupPanel/VBoxContainer/QuitText" method="onHover"]
[connection signal="focus_exited" from="PopupPanel/VBoxContainer/QuitText" to="PopupPanel/VBoxContainer/QuitText" method="onExit"]
[connection signal="gui_input" from="PopupPanel/VBoxContainer/QuitText" to="PopupPanel" method="onExitGameClicked"]
[connection signal="mouse_entered" from="PopupPanel/VBoxContainer/QuitText" to="PopupPanel/VBoxContainer/QuitText" method="onHover"]
[connection signal="mouse_exited" from="PopupPanel/VBoxContainer/QuitText" to="PopupPanel/VBoxContainer/QuitText" method="onExit"]
[connection signal="focus_entered" from="PopupPanel/VBoxContainer/Back" to="PopupPanel/VBoxContainer/Back" method="onHover"]
[connection signal="focus_exited" from="PopupPanel/VBoxContainer/Back" to="PopupPanel/VBoxContainer/Back" method="onExit"]
[connection signal="gui_input" from="PopupPanel/VBoxContainer/Back" to="PopupPanel" method="onBackLabelClicked"]
[connection signal="mouse_entered" from="PopupPanel/VBoxContainer/Back" to="PopupPanel/VBoxContainer/Back" method="onHover"]
[connection signal="mouse_exited" from="PopupPanel/VBoxContainer/Back" to="PopupPanel/VBoxContainer/Back" method="onExit"]
